# aurea

./: .gitignore  404.html  Cargo.toml  Makefile  ProjetoFinal.md  README.md  index.html  mkdocs.yml  search.html
.aurea/: README.md
.github/scripts/: check_i18n_keys.py
.github/workflows/: ci-docs.yml  ci-i18n.yml  ci-rust.yml  gh-pages.yml
ProjetoFinal/: index.html
adr/: ADR-001-canonical-json.md  ADR-002-policies-propose.md  ADR-TEMPLATE.md
adr/ADR-001-canonical-json/: index.html
adr/ADR-002-policies-propose/: index.html
adr/ADR-TEMPLATE/: index.html
apps/aurea/: Cargo.toml
apps/aurea/src/: main.rs
architecture/: apis.md  error_codes.md  oc_spec.md  overview.md
architecture/apis/: index.html
architecture/error_codes/: index.html
architecture/oc_spec/: index.html
architecture/overview/: index.html
artifacts/reports/: report_ui_a11y.md
charter/: project_charter.md
charter/project_charter/: index.html
compliance/: compliance.md  dpia_llm.md
compliance/compliance/: index.html
compliance/dpia_llm/: index.html
configs/launchd/: com.aurea.pmdaemon.plist
configs/prometheus/: README.md  aurea-alerts.yml
crates/aurea-artifacts-vcx-pack/: Cargo.toml
crates/aurea-artifacts-vcx-pack/src/: lib.rs
crates/aurea-core/: Cargo.toml
crates/aurea-core/src/: lib.rs
crates/aurea-core/src/nrf/: canon.rs  hash.rs  mod.rs  types.rs
crates/aurea-plugins/: Cargo.toml
crates/aurea-plugins/src/: lib.rs
crates/aurea-pmdaemon/: Cargo.toml
crates/aurea-pmdaemon/src/: main.rs
crates/aurea-policy/: Cargo.toml
crates/aurea-policy/src/: lib.rs
crates/aurea-receipts/: Cargo.toml
crates/aurea-receipts/src/: lib.rs
crates/aurea-runtime/: Cargo.toml
crates/aurea-runtime/src/: lib.rs
crates/aurea-runtime/tests/: runtime_flow.rs
crates/aurea-storage/: Cargo.toml
crates/aurea-storage/src/: lib.rs
crates/aurea-storage/tests/: reassign.rs  retention.rs
crates/aurea-ui-web/: Cargo.toml
crates/aurea-ui-web/src/: lib.rs
docs/: .aurea  ProjetoFinal.md  charter  governance  interop  prd  runbook  slo  sow
governance/: code_of_conduct.md  contributing.md  header_snippet.txt  release_checklist.md
governance/code_of_conduct/: index.html
governance/contributing/: index.html
governance/release_checklist/: index.html
interop/: data_refs.md  ro_crate_mapping.md
interop/data_refs/: index.html
interop/ro_crate_examples/: README.md  index.html
interop/ro_crate_mapping/: index.html
oc/: prompts.md
prd/: prd.md
prd/prd/: index.html
qa/: canon_fixtures.md  strategy.md  usability_scripts.md
qa/canon_fixtures/: index.html
qa/fixtures/canon/: jcs_vectors_err.json  jcs_vectors_ok.json  profile_null_strip.json  profile_num_norm.json
qa/strategy/: index.html
qa/usability_scripts/: index.html
runbook/: backup_restore.md  incidents.md  operations.md
runbook/backup_restore/: index.html
runbook/incidents/: index.html
runbook/operations/: index.html
search/: search_index.json
security/: key_rotation.md  security_privacy.md
security/key_rotation/: index.html
security/security_privacy/: index.html
slo/: metrics.md  slis_slos.md
slo/metrics/: index.html
slo/slis_slos/: index.html
sow/: statement_of_work.md
sow/statement_of_work/: index.html
templates/: ISSUE_TEMPLATE.md  PULL_REQUEST_TEMPLATE.md
tools/: build_docs.sh  smoke_all.sh  smoke_dual_control.sh  smoke_export.sh  smoke_idem.sh  smoke_metrics.sh  smoke_policy.sh  smoke_repair.sh  smoke_verify.sh
ux/: checklist_pr10.md  i18n_keys.json  microcopy.md  plan_card_spec.md  ux_checklist.md
ux/checklist_pr10/: index.html
ux/microcopy/: index.html
ux/plan_card_spec/: index.html
ux/ux_checklist/: index.html
