[package]
name = "aurea"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
rust-version.workspace = true

[dependencies]
anyhow.workspace = true
arrow-array.workspace = true
arrow-ipc.workspace = true
arrow-schema.workspace = true
async-stream.workspace = true
axum.workspace = true
base64.workspace = true
chrono.workspace = true
clap.workspace = true
ed25519-dalek.workspace = true
futures-core.workspace = true
rand.workspace = true
parquet.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
uuid.workspace = true

aurea-core = { path = "../../crates/aurea-core" }
aurea-artifacts-vcx-pack = { path = "../../crates/aurea-artifacts-vcx-pack" }
aurea-plugins = { path = "../../crates/aurea-plugins" }
aurea-policy = { path = "../../crates/aurea-policy" }
aurea-receipts = { path = "../../crates/aurea-receipts" }
aurea-runtime = { path = "../../crates/aurea-runtime" }
aurea-storage = { path = "../../crates/aurea-storage" }
aurea-ui-web = { path = "../../crates/aurea-ui-web" }
