[package]
name = "aurea-plugins"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
rust-version.workspace = true

[dependencies]
anyhow.workspace = true
async-trait.workspace = true
aurea-core = { path = "../aurea-core" }
serde_json.workspace = true
