[package]
name = "aurea-plugins"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
rust-version.workspace = true

[dependencies]
anyhow.workspace = true
async-trait.workspace = true
aurea-artifacts-vcx-pack = { path = "../aurea-artifacts-vcx-pack" }
aurea-core = { path = "../aurea-core" }
base64.workspace = true
serde_json.workspace = true

[dev-dependencies]
tokio.workspace = true
uuid.workspace = true
