[package]
name = "aurea-pmdaemon"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
rust-version.workspace = true

[dependencies]
anyhow.workspace = true
chrono.workspace = true
clap.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true

[[bin]]
name = "aurea-pmdaemon"
path = "src/main.rs"
