[package]
name = "aurea-runtime"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
rust-version.workspace = true

[dependencies]
anyhow.workspace = true
async-trait.workspace = true
aurea-core = { path = "../aurea-core" }
aurea-plugins = { path = "../aurea-plugins" }
aurea-storage = { path = "../aurea-storage" }
base64.workspace = true
chrono.workspace = true
ed25519-dalek.workspace = true
rand.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
tracing.workspace = true
uuid.workspace = true
