[package]
name = "aurea-storage"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
rust-version.workspace = true

[dependencies]
anyhow.workspace = true
aurea-core = { path = "../aurea-core" }
chrono.workspace = true
redb.workspace = true
serde.workspace = true
serde_json.workspace = true
uuid.workspace = true
