[package]
name = "aurea-ui-web"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
rust-version.workspace = true

[dependencies]
leptos = { version = "0.8.16", default-features = false, features = ["ssr"] }
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
